@@ -174,7 +174,7 @@ spc_misc_setup_handler (struct spc_handler *handle,
 
   key = args->curptr;
   while (args->curptr < args->endptr &&
-	 isalpha(args->curptr[0])) {
+	 isalpha((unsigned char)args->curptr[0])) {
     args->curptr++;
   }
 
